--- a/src/main/resources/assets/compactstatuseffects/lang/zh_cn.json
+++ b/src/main/resources/assets/compactstatuseffects/lang/zh_cn.json
@@ -1,7 +1,7 @@
 {
   "text.autoconfig.compactstatuseffects.title": "迷你状态效果配置",
   
-  "text.autoconfig.compactstatuseffects.option.module": "状态效果显示的方式",
+  "text.autoconfig.compactstatuseffects.option.module": "状态效果的显示方式",
   
   "text.autoconfig.compactstatuseffects.option.boxedConfig": "BOXED 图标模式设置 (图标及具体时长)",
   
