--- a/src/main/resources/assets/compactstatuseffects/lang/zh_cn.json
+++ b/src/main/resources/assets/compactstatuseffects/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-  "text.autoconfig.compactstatuseffects.title": "迷你状态效果配置",
+  "text.autoconfig.compactstatuseffects.title": "迷你状态效果配置 (Compact Status Effects)",
   
   "text.autoconfig.compactstatuseffects.option.module": "状态效果的显示方式",
   
