--- a/src/main/resources/assets/compactstatuseffects/lang/en_gb.json
+++ b/src/main/resources/assets/compactstatuseffects/lang/en_gb.json
@@ -2,32 +2,33 @@
   "text.autoconfig.compactstatuseffects.title": "Compact Status Effects config",
   
   "text.autoconfig.compactstatuseffects.option.module": "Effect display module to use",
+  "text.autoconfig.compactstatuseffects.option.margin": "Distance between status effects and GUI",
   
-  "text.autoconfig.compactstatuseffects.option.boxedConfig": "Boxed (no name) display config",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig": "No name display config",
   
-  "text.autoconfig.compactstatuseffects.option.boxedConfig.maxEffectsNumber": "Maximum number of effects that is displayed one 1 column",
-  "text.autoconfig.compactstatuseffects.option.boxedConfig.maxEffectsNumber.@Tooltip": "Control how many effects are displayed before new column in use",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig.maxEffectsNumber": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig.maxEffectsNumber.@Tooltip": "Controls how many effects are displayed before a new column is used",
   
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig": "Only name display config",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber": "Maximum number of effects that is displayed one 1 column",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber.@Tooltip": "Control how many effects are displayed before new column in use",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber.@Tooltip": "Controls how many effects are displayed before a new column is used",
   
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.permanentColour": "Colour of a permanent effect",
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.wontExpireSoonColour": "Colour of an effect that won't expire soon",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireColour": "Colour of soon expire effect",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireColour": "Colour of soon to expire effect",
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringColour": "Colour of an expiring effect",
   
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringBound": "Bound for expiring effect in seconds",
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringBound.@Tooltip[0]": "Effect below this are considered expiring, above - soon to expire",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringBound.@Tooltip[1]": "effect duration < expiring bound",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringBound.@Tooltip[1]": "expiring < bound < soon to expire",
   
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound": "Bound for soon to expire effects in seconds",
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound.@Tooltip[0]": "Effect below this are considered soon to expire, above - won't expire soon",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound.@Tooltip[1]": "expiring bound < effect duration < soon to expire bound",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound.@Tooltip[1]": "soon to expire < bound < won't expire soon",
   
   "text.autoconfig.compactstatuseffects.option.noSpriteConfig": "No sprite display config",
   
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber": "Maximum number of effects that is displayed one 1 column",
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber.@Tooltip": "Control how many effects are displayed before new column in use"
+  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber.@Tooltip": "Controls how many effects are displayed before a new column is used"
 }
