--- a/src/main/resources/assets/compactstatuseffects/lang/zh_cn.json
+++ b/src/main/resources/assets/compactstatuseffects/lang/zh_cn.json
@@ -2,16 +2,17 @@
   "text.autoconfig.compactstatuseffects.title": "迷你状态效果配置 (Compact Status Effects)",
   
   "text.autoconfig.compactstatuseffects.option.module": "状态效果的显示方式",
+  "text.autoconfig.compactstatuseffects.option.margin": "状态效果显示与 GUI 的间距",
   
-  "text.autoconfig.compactstatuseffects.option.boxedConfig": "BOXED 图标模式设置 (图标及具体时长)",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig": "NONAME 无名称模式设置 (图标+具体时长)",
   
-  "text.autoconfig.compactstatuseffects.option.boxedConfig.maxEffectsNumber": "每列能显示多少个状态效果",
-  "text.autoconfig.compactstatuseffects.option.boxedConfig.maxEffectsNumber.@Tooltip": "在转到下一列前能显示多少个状态效果",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig.maxEffectsNumber": "每列能显示多少个状态效果",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig.maxEffectsNumber.@Tooltip": "在启用新一列前能显示多少个状态效果",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig": "ONLYNAME 仅名称模式设置 (仅名称)",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig": "ONLYNAME 仅名称模式设置 (名称+粗略时长)",
   
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber": "每列能显示多少个状态效果",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber.@Tooltip": "在转到下一列前能显示多少个状态效果",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber.@Tooltip": "在启用新一列前能显示多少个状态效果",
   
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.permanentColour": "永久状态效果的颜色",
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.wontExpireSoonColour": "时长充足的颜色",
@@ -26,8 +27,8 @@
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound.@Tooltip[0]": "“时长不足” < 此处设置的界限 < “时长充足”",
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound.@Tooltip[1]": "( 剩余时长小于这个数值的状态效果属于 “时长不足”, 大于这个数值的属于 “时长充足” )",
   
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig": "NOSPRITE 名称模式设置 (名称及具体时长)",
+  "text.autoconfig.compactstatuseffects.option.noSpriteConfig": "NOSPRITE 无图标模式设置 (名称+具体时长)",
   
   "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber": "每列能显示多少个状态效果",
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber.@Tooltip": "在转到下一列前能显示多少个状态效果"
+  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber.@Tooltip": "在启用新一列前能显示多少个状态效果"
 }
