--- a/src/main/resources/assets/compactstatuseffects/lang/en_gb.json
+++ b/src/main/resources/assets/compactstatuseffects/lang/en_gb.json
@@ -7,6 +7,7 @@
   "text.autoconfig.compactstatuseffects.option.noNameConfig": "No name display config",
   
   "text.autoconfig.compactstatuseffects.option.noNameConfig.showLevel": "Show effect's level",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig.levelInArabic": "Show level as arabic number",
   
   "text.autoconfig.compactstatuseffects.option.noNameConfig.maxEffectsNumber": "Maximum number of effects in 1 column",
   "text.autoconfig.compactstatuseffects.option.noNameConfig.maxEffectsNumber.@Tooltip": "Controls how many effects are displayed before a new column is used",
