--- a/src/main/resources/assets/compactstatuseffects/lang/en_gb.json
+++ b/src/main/resources/assets/compactstatuseffects/lang/en_gb.json
@@ -2,20 +2,23 @@
   "text.autoconfig.compactstatuseffects.title": "Compact Status Effects config",
   
   "text.autoconfig.compactstatuseffects.option.module": "Effect display module to use",
-  "text.autoconfig.compactstatuseffects.option.margin": "Distance between status effects and GUI",
   
   "text.autoconfig.compactstatuseffects.option.noNameConfig": "No name display config",
+  
+  "text.autoconfig.compactstatuseffects.option.noNameConfig.margin": "Distance between status effects and GUI",
   
   "text.autoconfig.compactstatuseffects.option.noNameConfig.showLevel": "Show effect's level",
   "text.autoconfig.compactstatuseffects.option.noNameConfig.levelInArabic": "Show level as arabic number",
   
-  "text.autoconfig.compactstatuseffects.option.noNameConfig.maxEffectsNumber": "Maximum number of effects in 1 column",
-  "text.autoconfig.compactstatuseffects.option.noNameConfig.maxEffectsNumber.@Tooltip": "Controls how many effects are displayed before a new column is used",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig.effectsPerColumn": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.noNameConfig.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used",
   
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig": "Only name display config",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber": "Maximum number of effects in 1 column",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.maxEffectsNumber.@Tooltip": "Controls how many effects are displayed before a new column is used",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.margin": "Distance between status effects and GUI",
+  
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.effectsPerColumn": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used",
   
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.permanentColour": "Colour of a permanent effect",
   "text.autoconfig.compactstatuseffects.option.onlyNameConfig.wontExpireSoonColour": "Colour of an effect that won't expire soon",
@@ -32,6 +35,8 @@
   
   "text.autoconfig.compactstatuseffects.option.noSpriteConfig": "No sprite display config",
   
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber": "Maximum number of effects in 1 column",
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.maxEffectsNumber.@Tooltip": "Controls how many effects are displayed before a new column is used"
+  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.margin": "Distance between status effects and GUI",
+  
+  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.effectsPerColumn": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used"
 }
