--- a/src/main/resources/assets/compactstatuseffects/lang/en_gb.json
+++ b/src/main/resources/assets/compactstatuseffects/lang/en_gb.json
@@ -3,40 +3,43 @@
   
   "text.autoconfig.compactstatuseffects.option.module": "Effect display module to use",
   
-  "text.autoconfig.compactstatuseffects.option.noNameConfig": "No name display config",
+  "text.autoconfig.compactstatuseffects.option.noName": "No Name display config",
   
-  "text.autoconfig.compactstatuseffects.option.noNameConfig.margin": "Distance between status effects and GUI",
+  "text.autoconfig.compactstatuseffects.option.noName.uiOffset": "UI offset with active effects",
+  "text.autoconfig.compactstatuseffects.option.noName.margin": "Distance between status effects and GUI",
   
-  "text.autoconfig.compactstatuseffects.option.noNameConfig.showLevel": "Show effect's level",
-  "text.autoconfig.compactstatuseffects.option.noNameConfig.levelInArabic": "Show level as arabic number",
+  "text.autoconfig.compactstatuseffects.option.noName.showLevel": "Show effect's level",
+  "text.autoconfig.compactstatuseffects.option.noName.levelInArabic": "Show level as arabic number",
   
-  "text.autoconfig.compactstatuseffects.option.noNameConfig.effectsPerColumn": "Maximum number of effects in 1 column",
-  "text.autoconfig.compactstatuseffects.option.noNameConfig.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used",
+  "text.autoconfig.compactstatuseffects.option.noName.effectsPerColumn": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.noName.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig": "Only name display config",
+  "text.autoconfig.compactstatuseffects.option.onlyName": "Only Name display config",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.margin": "Distance between status effects and GUI",
+  "text.autoconfig.compactstatuseffects.option.onlyName.uiOffset": "UI offset with active effects",
+  "text.autoconfig.compactstatuseffects.option.onlyName.margin": "Distance between status effects and GUI",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.effectsPerColumn": "Maximum number of effects in 1 column",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used",
+  "text.autoconfig.compactstatuseffects.option.onlyName.effectsPerColumn": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.onlyName.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.permanentColour": "Colour of a permanent effect",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.wontExpireSoonColour": "Colour of an effect that won't expire soon",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireColour": "Colour of soon to expire effect",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringColour": "Colour of an expiring effect",
+  "text.autoconfig.compactstatuseffects.option.onlyName.permanentColour": "Colour of a permanent effect",
+  "text.autoconfig.compactstatuseffects.option.onlyName.wontExpireSoonColour": "Colour of an effect that won't expire soon",
+  "text.autoconfig.compactstatuseffects.option.onlyName.soonToExpireColour": "Colour of soon to expire effect",
+  "text.autoconfig.compactstatuseffects.option.onlyName.expiringColour": "Colour of an expiring effect",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringBound": "Bound for expiring effect in seconds",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringBound.@Tooltip[0]": "Effect below this are considered expiring, above - soon to expire",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.expiringBound.@Tooltip[1]": "expiring < bound < soon to expire",
+  "text.autoconfig.compactstatuseffects.option.onlyName.expiringBound": "Bound for expiring effect in seconds",
+  "text.autoconfig.compactstatuseffects.option.onlyName.expiringBound.@Tooltip[0]": "Effect below this are considered expiring, above - soon to expire",
+  "text.autoconfig.compactstatuseffects.option.onlyName.expiringBound.@Tooltip[1]": "expiring < bound < soon to expire",
   
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound": "Bound for soon to expire effects in seconds",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound.@Tooltip[0]": "Effect below this are considered soon to expire, above - won't expire soon",
-  "text.autoconfig.compactstatuseffects.option.onlyNameConfig.soonToExpireBound.@Tooltip[1]": "soon to expire < bound < won't expire soon",
+  "text.autoconfig.compactstatuseffects.option.onlyName.soonToExpireBound": "Bound for soon to expire effects in seconds",
+  "text.autoconfig.compactstatuseffects.option.onlyName.soonToExpireBound.@Tooltip[0]": "Effect below this are considered soon to expire, above - won't expire soon",
+  "text.autoconfig.compactstatuseffects.option.onlyName.soonToExpireBound.@Tooltip[1]": "soon to expire < bound < won't expire soon",
   
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig": "No sprite display config",
+  "text.autoconfig.compactstatuseffects.option.noSprite": "No Sprite display config",
   
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.margin": "Distance between status effects and GUI",
+  "text.autoconfig.compactstatuseffects.option.noSprite.uiOffset": "UI offset with active effects",
+  "text.autoconfig.compactstatuseffects.option.noSprite.margin": "Distance between status effects and GUI",
   
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.effectsPerColumn": "Maximum number of effects in 1 column",
-  "text.autoconfig.compactstatuseffects.option.noSpriteConfig.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used"
+  "text.autoconfig.compactstatuseffects.option.noSprite.effectsPerColumn": "Maximum number of effects in 1 column",
+  "text.autoconfig.compactstatuseffects.option.noSprite.effectsPerColumn.@Tooltip": "Controls how many effects are displayed before a new column is used"
 }
